use gremlin like query